--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
     --larger-text-size: 24px; /* Frozen time display */
 }
 
-/* Load Sequel Rounded */
+/* Load Sequel Rounded Font */
 @font-face {
     font-family: 'SequelRounded';
-    src: url('/assets/fonts/sequelrounded.woff2') format('woff2'),
-         url('/assets/fonts/sequelrounded.woff') format('woff');
+    src: url('/assets/fonts/sequelfont.woff2') format('woff2'),
+         url('/assets/fonts/sequelfont.woff') format('woff');
     font-display: swap;
     font-weight: normal;
     font-style: normal;
