--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
 /* Load Sequel Rounded Font */
 @font-face {
     font-family: 'SequelRounded';
-    src: url('/assets/fonts/sequelfont.woff2') format('woff2'),
-         url('/assets/fonts/sequelfont.woff') format('woff');
+    src: url('/assets/fonts/sequelfont.ttf') format('truetype');
     font-display: swap;
     font-weight: normal;
     font-style: normal;
