added hover animations to ARIANN and EDU

--- a/style.css
+++ b/style.css
@@ -101,10 +101,11 @@ nav a:hover {
     text-transform: lowercase;
 }
 
-/* Ensure "at" and "dot" are italicized */
+/* Ensure "at" and "dot" are italicized, black and non-bold */
 .email em {
     color: black;
     font-style: italic;
+    font-weight: normal;
 }
 
 /* Clickable elements */
