--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ nav a:hover {
     padding: 15px;
     border-radius: 8px;
     font-size: 16px;
-    text-align: center;
+    text-align: justified;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     width: 50%;
     max-width: 400px;
