--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav a:hover {
 
 /* Ensure "at" and "dot" are italicized, black and non-bold */
 .email em {
-    color: white;
+    color: black;
     font-style: italic;
     font-weight: normal;
 }
