--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ header .personal-text {
     color: black;
     font-size: var(--text-size);
     margin-top: 3px; /* Reduce space above */
+    margin-bottom: 10px;
     text-align: center;
 }
 
