--- a/style.css
+++ b/style.css
@@ -422,3 +422,7 @@ footer a.clickable:hover {
     margin: 10px auto; /* Centers the image inside the pop-up */
     border-radius: 8px; /* Optional: Rounds corners for a clean look */
 }
+
+.hidden {
+    display: none !important;
+}
